--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <script src="index.js"></script>
+    <a href="register.html" target="">Time-table</a>
+    <a href="table.html" target="fr1">Time-table</a>
+    <iframe src="" frameborder="0" name="fr1" style="border: 2px solid; height: 200px; width: 340px;"></iframe>
 </body>
 </html>
